# uv

./: AGENT.md  Cargo.toml  INTEGRATION.md  README.md  hawk.toml
.github/workflows/: test-system.yml  test.yml
crates/uv/: Cargo.toml
crates/uv-auth/src/: keyring.rs  lib.rs  middleware.rs  pyx.rs  store.rs
crates/uv-bench/: Cargo.toml
crates/uv-bin-install/src/: lib.rs
crates/uv-build-backend/: Cargo.toml
crates/uv-build-backend/src/: lib.rs  settings.rs
crates/uv-build-frontend/src/: lib.rs
crates/uv-cache-guardian/: Cargo.toml  README.md
crates/uv-cache-guardian/src/: ci.rs  cli.rs  conservation.rs  eviction.rs  lib.rs  monitor.rs  phase.rs  snapshot.rs
crates/uv-cache-guardian/src/examples/: basic_monitoring.rs  ci_optimizer.rs
crates/uv-cache/src/: lib.rs
crates/uv-cli/src/: lib.rs
crates/uv-client/src/: base_client.rs  error.rs  lib.rs  registry_client.rs  rkyvutil.rs
crates/uv-configuration/src/: concurrency.rs  dependency_groups.rs  extras.rs  install_options.rs  overrides.rs  package_options.rs  target_triple.rs
crates/uv-dev/: Cargo.toml
crates/uv-distribution/: Cargo.toml
crates/uv-distribution-types/src/: build_info.rs  buildable.rs  file.rs  index.rs  index_name.rs  (+8 more)
crates/uv-extract/: Cargo.toml
crates/uv-git/: Cargo.toml
crates/uv-integration/: Cargo.toml
crates/uv-macros/: Cargo.toml
crates/uv-once-map/: Cargo.toml
crates/uv-python/: download-metadata.json
crates/uv-resolver/: Cargo.toml
crates/uv-types/: Cargo.toml
crates/uv-workspace/: Cargo.toml
memory/: JOURNAL.md
scripts/scenarios/: generate.py
(+100 files in other folders)
