[package]
name = "uv-cache-guardian"
version = "0.1.0"
edition.workspace = true
description = "Resource-aware caching for uv — monitors cache size, bandwidth, and install time with conservation laws and KL divergence eviction"
authors = ["SuperInstance"]
keywords = ["uv", "cache", "ci", "python", "package-management"]
categories = ["development-tools::build-utils", "command-line-utilities"]
repository = "https://github.com/SuperInstance/uv"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2"
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
csv = "1.3.0"

[dev-dependencies]
tempfile = "3"
